Fix alignment issue.

--- a/BHCDatabase/app/assets/stylesheets/custom.scss
+++ b/BHCDatabase/app/assets/stylesheets/custom.scss
@@ -263,6 +263,7 @@ input {
 .areas {
   list-style: none;
   margin: 0;
+  padding: 0;
   li {
     overflow: auto;
     padding: 10px 0;
